force-app/main/default/objects/Contact/fields/Contact_GSA_Short_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Contact_GSA_Short_Symbol__c</fullName>
    <description>GCIM Load</description>
    <label>GSA Short Symbol</label>
    <length>25</length>
    <type>Text</type>
</CustomField>