force-app/main/default/objects/Contact/fields/Contact_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Organization_Name__c</fullName>
    <description>GCIM Load</description>
    <label>Organization Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>