force-app/main/default/objects/Contact/fields/MAJOR_ORG__c.field-meta.xml
<CustomField>
    <fullName>MAJOR_ORG__c</fullName>
    <description>GCIM Load</description>
    <label>Master ORG</label>
    <length>2</length>
    <type>Text</type>
</CustomField>