force-app/main/default/objects/Contact/fields/PBS_AAAP_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Alternate_Phone__c</fullName>
    <label>Extension</label>
    <type>Phone</type>
</CustomField>