force-app/main/default/objects/Contact/fields/PBS_AAAP_Company__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Company__c</fullName>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>