force-app/main/default/objects/Contact/fields/PBS_AAAP_PIN__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PIN__c</fullName>
    <inlineHelpText>PIN is used for added security while submitting the Offer.</inlineHelpText>
    <label>PIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>