force-app/main/default/objects/Contact/fields/PBS_AAAP_Regions__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Regions__c</fullName>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Capital Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>