force-app/main/default/objects/Contact/fields/PBS_AAAP_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Terms_and_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By clicking the checkbox, you agree to the terms in the Content to Use Information and the Online Terms and Conditions documents.</description>
    <label>Terms and Conditions</label>
    <type>Checkbox</type>
</CustomField>