force-app/main/default/objects/Contact/fields/PBS_AAAP_Website__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>