force-app/main/default/objects/Contact/fields/WORK_BUILDING_PRIMARY__c.field-meta.xml
<CustomField>
    <fullName>WORK_BUILDING_PRIMARY__c</fullName>
    <description>GCIM Load</description>
    <label>Work Location</label>
    <length>6</length>
    <type>Text</type>
</CustomField>