force-app/main/default/objects/Contact/recordTypes/GSA.recordType-meta.xml
<RecordType>
    <fullName>GSA</fullName>
    <active>true</active>
    <description>This contact record is used to track information for GSA employees.</description>
    <label>GSA</label>
</RecordType>